# img2dataset-rs

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-bake.hcl  flake.nix  justfile
.github/workflows/: release.yml
.sqlx/: query-69fa5a2c99000907abd80764dd5dd42a35edaf20e30bc140ed1e95cf056022d5.json  query-92f02e1dc089c85d57276e50bc8facf43fbb5aaeab168691e490f861c801159e.json
migrations/: 20250711121850_init.sql
src/: downloader.rs  main.rs  manager.rs  observability.rs  pipeline.rs  reader.rs  resizer.rs  sampler.rs  state.rs  status_line.rs  sync.rs  tui.rs  types.rs  writer.rs
