[package]
name = "img2dataset-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
anyhow = "1.0.98"
ctrlc = "3.4.7"
glob = "0.3.2"
bytes = "1.10.1"
image = "0.25.6"
async-stream = "0.3.6"
csv-async = { version = "1.3", features = ["tokio"] }
futures = "0.3"
opendal = { version = "0.53.3", features = [
    "services-huggingface",
    "services-s3",
    "services-fs",
] }
reqwest = { version = "0.12.22", features = ["stream", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
tar = "0.4.44"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io", "compat"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rayon = "1.10.0"
serde_json = "1.0.140"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-ring-webpki",
    "sqlite",
] }
arrow = { version = "55.2.0", features = ["ipc"] }
parquet = { version = "55.2.0", features = ["arrow", "async"] }
