[package]
name = "img2dataset-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
anyhow = "1.0.98"
ctrlc = "3.4.7"
glob = "0.3.2"
bytes = "1.10.1"
image = "0.25.6"
async-stream = "0.3.6"
csv-async = { version = "1.3", features = ["tokio"] }
futures = "0.3"
opendal = { version = "0.53.3", features = [
    "services-huggingface",
    "services-s3",
    "services-fs",
] }
reqwest = { version = "0.12.22", features = ["stream", "json", "hickory-dns"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["io", "compat"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json = "1.0.140"
arrow = { version = "55.2.0", features = ["ipc"] }
parquet = { version = "55.2.0", features = ["arrow", "async"] }
chrono = { version = "0.4.41", features = ["serde"] }
base64 = "0.22.1"
async-tar = "0.5.0"
tracing-opentelemetry = "0.31.0"
opentelemetry = { version = "0.30.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
axum = "0.8.4"
prometheus = "0.14.0"
lazy_static = "1.5.0"
jemallocator = { version = "0.5.4", features = ["stats"] }
indicatif = "0.17.8"
