[package]
name = "img2dataset-rs"
version = "0.1.10"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async && Parallel processing
rayon = "1.10.0"
futures = "0.3"
async-stream = "0.3.6"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["io", "compat"] }

# File reading and writing
bytes = "1.10.1"
image = "0.25.6"
async-tar = "0.5.0"
csv-async = { version = "1.3", features = ["tokio"] }
arrow = { version = "55.2.0", features = ["ipc"] }
arrow-select = "55.2.0"
parquet = { version = "55.2.0", features = ["arrow", "async"] }
opendal = { version = "0.53.3", features = [
    "services-huggingface",
    "services-s3",
    "services-fs",
    "services-b2",
] }

# Observability dependencies
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-opentelemetry = "0.31.0"
opentelemetry = { version = "0.30.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry-resource-detectors = "0.9.0"
opentelemetry-appender-tracing = { version = "0.30.1", features = [
    "tracing-opentelemetry",
] }
opentelemetry-stdout = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", default-features = false, features = [
    "grpc-tonic",
    "reqwest-rustls-webpki-roots",
    "tokio",
    "tonic",
    "trace",
    "metrics",
    "logs",
] }

# Utils
uuid = { version = "1.17.0", features = ["v7"] }
clap = { version = "4.5.41", features = ["derive"] }
anyhow = "1.0.98"
reqwest = { version = "0.12.22", default-features = false, features = [
    "stream",
    "json",
    "hickory-dns",
    "rustls-tls",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }
base64 = "0.22.1"
sysinfo = "0.36.0"
reqwest-tracing = "0.5.8"
reqwest-middleware = { version = "0.4.2", features = ["rustls-tls"] }
